<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="ad_activity_refresh">正在努力刷新中…</string>
    <string name="ad_error_tip">"您的网络开小差啦
点击重新加载或检查网络"</string>
    <string name="app_name">皮皮旸听学盒子</string>
    <string name="app_name1">皮皮旸听学盒子</string>
    <string name="check_qq">请安装QQ客户端</string>
    <string name="day_c">日</string>
    <string name="definite_integral">定积分</string>
    <string name="download_stop">暂不支持下载</string>
    <string name="edit_derivation">求导</string>
    <string name="edit_draw_image">绘制图像</string>
    <string name="edit_integral">积分</string>
    <string name="edit_number_max">文字数不能超过</string>
    <string name="edit_polynomial_combination">多项式合并</string>
    <string name="edit_polynomial_decomposition">因式分解</string>
    <string name="edit_polynomial_open">多项式展开</string>
    <string name="equation_other">或者</string>
    <string name="equation_result">结果</string>
    <string name="equation_solve">求解方程</string>
    <string name="equation_solve_result">使分解后的多项式=0，求解方程，得</string>
    <string name="equation_tv_solve1">第一步</string>
    <string name="equation_tv_solve2">第二步</string>
    <string name="equation_tv_solve3">第三步</string>
    <string name="equation_tv_solve4">第四步</string>
    <string name="formula_error_exception">表达式异常</string>
    <string name="formula_function_null">函数名为空</string>
    <string name="formula_switch_error">含有不能识别的内容</string>
    <string name="formula_switch_middle">中</string>
    <string name="formula_switch_null">待转换的内容为空</string>
    <string name="formula_switch_tail">为空</string>
    <string name="formula_switch_title">公式：</string>
    <string name="formula_switch_type">类型公式转换</string>
    <string name="formula_un_implement">未实现</string>
    <string name="function_error">函数格式错误</string>
    <string name="function_error_explain">图像还画不出来┭┮﹏┭┮</string>
    <string name="function_exception_unknown">函数转换出现异常</string>
    <string name="function_image">函数图像</string>
    <string name="function_scale_max">已达最大放大级别</string>
    <string name="function_scale_min">已达最小缩小级别</string>
    <string name="history_clear_context">确认清空所有记录么</string>
    <string name="history_clear_record">清空记录</string>
    <string name="history_delete_context">确认删除该条记录么</string>
    <string name="history_delete_negative">取消</string>
    <string name="history_delete_positive">删除</string>
    <string name="history_return">返回</string>
    <string name="hour_c">时</string>
    <string name="keyboard_a">a</string>
    <string name="keyboard_abs">abs</string>
    <string name="keyboard_arccos">arccos</string>
    <string name="keyboard_arcsin">arcsin</string>
    <string name="keyboard_arctan">arctan</string>
    <string name="keyboard_b">b</string>
    <string name="keyboard_backspace">backspace</string>
    <string name="keyboard_btn_equal">equal</string>
    <string name="keyboard_c">c</string>
    <string name="keyboard_clear">clear</string>
    <string name="keyboard_combination">combination</string>
    <string name="keyboard_cos">cos</string>
    <string name="keyboard_cursor_left">cursor_left</string>
    <string name="keyboard_cursor_right">cursor_right</string>
    <string name="keyboard_degree">degree</string>
    <string name="keyboard_delete">delete</string>
    <string name="keyboard_divide">/</string>
    <string name="keyboard_dot">.</string>
    <string name="keyboard_e">e</string>
    <string name="keyboard_eight">8</string>
    <string name="keyboard_equa1">equa1</string>
    <string name="keyboard_equa10">equa10</string>
    <string name="keyboard_equa11">equa11</string>
    <string name="keyboard_equa12">equa12</string>
    <string name="keyboard_equa13">equa13</string>
    <string name="keyboard_equa2">equa2</string>
    <string name="keyboard_equa3">equa3</string>
    <string name="keyboard_equa4">equa4</string>
    <string name="keyboard_equa5">equa5</string>
    <string name="keyboard_equa6">equa6</string>
    <string name="keyboard_equa7">equa7</string>
    <string name="keyboard_equa8">equa8</string>
    <string name="keyboard_equa9">equa9</string>
    <string name="keyboard_equal">=</string>
    <string name="keyboard_factorial">!</string>
    <string name="keyboard_five">5</string>
    <string name="keyboard_four">4</string>
    <string name="keyboard_frac">frac</string>
    <string name="keyboard_gcd">gcd</string>
    <string name="keyboard_ge">ge</string>
    <string name="keyboard_greater">greater</string>
    <string name="keyboard_integ">integ</string>
    <string name="keyboard_lcm">lcm</string>
    <string name="keyboard_le">le</string>
    <string name="keyboard_left">left</string>
    <string name="keyboard_left_paren">(</string>
    <string name="keyboard_less">less</string>
    <string name="keyboard_ln">ln</string>
    <string name="keyboard_log">log</string>
    <string name="keyboard_log10">log10</string>
    <string name="keyboard_log2">log2</string>
    <string name="keyboard_minus">-</string>
    <string name="keyboard_minute">minute</string>
    <string name="keyboard_mod">mod</string>
    <string name="keyboard_multiply">*</string>
    <string name="keyboard_nine">9</string>
    <string name="keyboard_one">1</string>
    <string name="keyboard_percent">percent</string>
    <string name="keyboard_permutation">permutation</string>
    <string name="keyboard_pi">pi</string>
    <string name="keyboard_plus">+</string>
    <string name="keyboard_power">^</string>
    <string name="keyboard_right">right</string>
    <string name="keyboard_right_paren">)</string>
    <string name="keyboard_second">second</string>
    <string name="keyboard_seven">7</string>
    <string name="keyboard_sin">sin</string>
    <string name="keyboard_six">6</string>
    <string name="keyboard_sqrt">sqrt</string>
    <string name="keyboard_tan">tan</string>
    <string name="keyboard_three">3</string>
    <string name="keyboard_two">2</string>
    <string name="keyboard_x">x</string>
    <string name="keyboard_y">y</string>
    <string name="keyboard_z">z</string>
    <string name="keyboard_zero">0</string>
    <string name="main_top_title">计算</string>
    <string name="max">值太大了，超出范围</string>
    <string name="minute_c">分</string>
    <string name="month_c">月</string>
    <string name="no_history">无历史记录</string>
    <string name="no_update">已是最新版本，无需更新</string>
    <string name="not_format">格式不支持</string>
    <string name="polynomial_decomposition_error">多项式分解异常</string>
    <string name="polynomial_not_support_warning">多项式不支持取余运算符</string>
    <string name="polynomial_result_tip">，得</string>
    <string name="quit_exit">再按一次退出</string>
    <string name="search_menu_title">Search</string>
    <string name="service">在线客服</string>
    <string name="setting_decimal_places">小数点位数</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_praise">好评鼓励</string>
    <string name="setting_privacy_policy">隐私政策</string>
    <string name="setting_update">检查更新</string>
    <string name="setting_user_protocol">用户协议</string>
    <string name="slide_calculator">计算</string>
    <string name="slide_conversion">单位转换</string>
    <string name="slide_course">教程</string>
    <string name="slide_setting">设置</string>
    <string name="solve">求解方程</string>
    <string name="solve_not_support_warning">解方程不支持取余运算符</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="today">今天</string>
    <string name="tutorial_question_1">如何进行函数绘制</string>
    <string name="tutorial_question_2">如何移动光标</string>
    <string name="tutorial_question_3">如何一键清空</string>
    <string name="tutorial_question_4">如何操作计算结果</string>
    <string name="tutorial_question_5">如何恢复某一条历史记录</string>
    <string name="tutorial_solution_1">输入函数“X+2”，点击完成出现“绘制图像”按钮，点击即可</string>
    <string name="tutorial_solution_2">点击键盘上方的左右按钮，或者直接点击输入区的位置，可进行光标移动</string>
    <string name="tutorial_solution_3">点击键盘上方的清空按钮，可清空输入区</string>
    <string name="tutorial_solution_4">对已经计算出来的结果进行点击，可自动将之前计算得到的结果填充到输入区</string>
    <string name="tutorial_solution_5">进入历史记录页面，点击需要恢复的某一条记录，可自动将等式填充到输入区</string>
    <string name="unit_1">长度</string>
    <string name="unit_10">温度</string>
    <string name="unit_10_1">摄氏度</string>
    <string name="unit_10_2">华氏度</string>
    <string name="unit_10_3">列氏度</string>
    <string name="unit_10_4">开氏度</string>
    <string name="unit_10_5">兰氏度</string>
    <string name="unit_11">功率</string>
    <string name="unit_11_1">千瓦</string>
    <string name="unit_11_10">英尺·磅/秒</string>
    <string name="unit_11_2">瓦</string>
    <string name="unit_11_3">焦耳/秒</string>
    <string name="unit_11_4">牛顿·米/秒</string>
    <string name="unit_11_5">英制马力</string>
    <string name="unit_11_6">米制马力</string>
    <string name="unit_11_7">公斤·米/秒</string>
    <string name="unit_11_8">千卡/秒</string>
    <string name="unit_11_9">英热单位/秒</string>
    <string name="unit_12">热</string>
    <string name="unit_12_1">千焦</string>
    <string name="unit_12_10">英热单位</string>
    <string name="unit_12_11">英尺·磅</string>
    <string name="unit_12_2">焦耳</string>
    <string name="unit_12_3">公斤·米</string>
    <string name="unit_12_4">米制马力·时</string>
    <string name="unit_12_5">英制马力·时</string>
    <string name="unit_12_6">千瓦·时</string>
    <string name="unit_12_7">度</string>
    <string name="unit_12_8">卡</string>
    <string name="unit_12_9">千卡</string>
    <string name="unit_13">密度</string>
    <string name="unit_13_1">千克/立方厘米</string>
    <string name="unit_13_2">千克/立方分米</string>
    <string name="unit_13_3">千克/立方米</string>
    <string name="unit_13_4">克/立方厘米</string>
    <string name="unit_13_5">克/立方分米</string>
    <string name="unit_13_6">克/立方米</string>
    <string name="unit_14">存储</string>
    <string name="unit_14_1">比特</string>
    <string name="unit_14_2">字节</string>
    <string name="unit_14_3">千字节</string>
    <string name="unit_14_4">兆字节</string>
    <string name="unit_14_5">千兆字节</string>
    <string name="unit_14_6">太字节</string>
    <string name="unit_14_7">拍字节</string>
    <string name="unit_14_8">艾字节</string>
    <string name="unit_15">进制</string>
    <string name="unit_15_1">十进制</string>
    <string name="unit_15_2">二进制</string>
    <string name="unit_15_3">八进制</string>
</resources>